# threat-detector-mcp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: docs.yml  lint.yml
docs/: conf.py  index.rst  modules.rst  src.app.rst  src.config.rst  src.database.rst  src.main.rst  src.models.rst  src.monitoring.rst
logs/: metrics.json
src/: __init__.py  app.py  config.py  database.py  main.py  models.py  monitoring.py
src/threat_analysis/: __init__.py  app.py  version.py
src/threat_analysis/utils/: nlp.py  validation.py
tests/: conftest.py  test_database.py  test_monitoring.py  test_threat_analysis.py
