[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threat-analysis-mcp"
version = "0.1.0"
description = "A FastAPI-based server for analyzing text communications for potential terrorist threats using NLP and machine learning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Threat Analysis MCP Team"}
]
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "python-dotenv>=1.0.1",
    "nltk>=3.8.1",
    "pydantic>=2.6.1",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "pytest>=7.4.3",
    "httpx>=0.26.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.8",
    "spacy>=3.7.2",
    "transformers>=4.37.2",
    "torch>=2.2.0",
    "numpy>=1.26.2",
    "pytest-cov>=4.1.0",
    "networkx>=3.2.1",
    "flask-sqlalchemy>=3.1.1",
    "alembic>=1.13.1",
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.2",
    "black>=24.1.1",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0"
]

[project.optional-dependencies]
dev = [
    "black>=24.1.1",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
exclude = [".git", "__pycache__", "build", "dist", "docs"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "nltk.*",
    "spacy.*",
    "transformers.*"
]
ignore_missing_imports = true 